--- a/proj.env
+++ b/proj.env
@@ -1,6 +1,7 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=""
-DB_NAME='agenda_db'
+DB_HOST="seuhost"
+DB_USER="seu_user"
+DB_PASSWORD="sua_senha"
+DB_NAME='nome_db'
 DB_PORT=3306
+
 SERVER_PORT=3000
